# Tidalua

./: .clangd  .gitignore  .luarc.json  CMakeLists.txt  README.md  build.sh  clean.sh  deps.sh  init.sh  lua.sh  portaudio.sh  todo.txt
lua-5.4.7/src/: luac
lua/src/: lua  luac
scripts/: 1_intro.lua  2_.lua  3_pan.lua  7_tick.lua  8_percussion.lua  README.md  ar.lua  atk_rel.lua  chord.lua  empty.lua  example1.lua  example3.lua  example5.lua  fallenfortress.lua  highpass.lua  keyboard.lua  lfo.lua  melody_example.lua  ocean.lua  pan.lua  percussion.lua  random.lua  test.lua  test10.lua  test2.lua  test5.lua  test7.lua  test8.lua  tick.lua  track1.lua  track2.lua  unison.lua  unison2.lua
scripts/demos/: data.lua  keyboard.lua
scripts/examples/: chord.lua  lowpass.lua  mem.lua  randomseed.lua  unison.lua
scripts/old/: empty.lua  example2.lua  example4.lua  example6.lua  melody_example.lua  test3.lua  test4.lua  test5.lua  test6.lua  test9.lua
scripts/tracks/: duo.lua  track2.lua  track3.lua
src/: config.h  globals.h  luaBinds.h  main.c  notes.h  pa.h  synth.h  synth2.h  util.h  vis.h  vis2.h
